[package]
name = "zub"
version = "0.1.0"
edition = "2021"
description = "Git-like Object Tree - content-addressed filesystem store for rootfs fragments"
license = "MIT"

[lib]
name = "zub"
path = "src/lib.rs"

[[bin]]
name = "zub"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
toml = "0.8"
thiserror = "2"
walkdir = "2"
nix = { version = "0.30", features = ["fs", "user"] }
xattr = "1"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap"]

[dev-dependencies]
tempfile = "3"
serde_json = "1"
